--- a/app/src/main/res/layout/layout_6_6.xml
+++ b/app/src/main/res/layout/layout_6_6.xml
@@ -9,52 +9,58 @@
         android:rowCount="7">
 
         <ImageButton
+            android:id="@+id/imageButton2"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:id="@+id/imageButton7"
-            android:layout_row="1"
             android:layout_column="1"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp" />
-
-        <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:id="@+id/imageButton6"
             android:layout_row="1"
-            android:layout_column="2"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
-
-        <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:id="@+id/imageButton5"
-            android:layout_row="1"
-            android:layout_column="3"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
-
-        <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:id="@+id/imageButton4"
-            android:layout_row="1"
-            android:layout_column="4"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="1" />
 
         <ImageButton
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:id="@+id/imageButton3"
             android:layout_row="1"
-            android:layout_column="5"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            android:layout_column="2"
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="2"/>
 
         <ImageButton
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:id="@+id/imageButton2"
+            android:id="@+id/imageButton4"
+            android:layout_row="1"
+            android:layout_column="3"
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="3"/>
+
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/imageButton5"
+            android:layout_row="1"
+            android:layout_column="4"
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="4"/>
+
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/imageButton6"
+            android:layout_row="1"
+            android:layout_column="5"
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="5"/>
+
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/imageButton7"
             android:layout_row="1"
             android:layout_column="6"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="6"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -62,7 +68,8 @@
             android:id="@+id/imageButton8"
             android:layout_row="2"
             android:layout_column="1"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="7"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -70,7 +77,8 @@
             android:id="@+id/imageButton9"
             android:layout_row="2"
             android:layout_column="2"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="8"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -78,7 +86,8 @@
             android:id="@+id/imageButton10"
             android:layout_row="2"
             android:layout_column="3"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="9"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -86,7 +95,8 @@
             android:id="@+id/imageButton11"
             android:layout_row="2"
             android:layout_column="4"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="10"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -94,7 +104,8 @@
             android:id="@+id/imageButton12"
             android:layout_row="2"
             android:layout_column="5"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="11"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -102,7 +113,8 @@
             android:id="@+id/imageButton13"
             android:layout_row="2"
             android:layout_column="6"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="12"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -110,7 +122,8 @@
             android:id="@+id/imageButton14"
             android:layout_row="3"
             android:layout_column="1"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="13"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -118,7 +131,8 @@
             android:id="@+id/imageButton15"
             android:layout_row="3"
             android:layout_column="2"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="14"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -126,7 +140,8 @@
             android:id="@+id/imageButton16"
             android:layout_row="3"
             android:layout_column="3"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="15"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -134,7 +149,8 @@
             android:id="@+id/imageButton17"
             android:layout_row="3"
             android:layout_column="4"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="16"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -142,7 +158,8 @@
             android:id="@+id/imageButton18"
             android:layout_row="3"
             android:layout_column="5"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="17"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -150,7 +167,8 @@
             android:id="@+id/imageButton19"
             android:layout_row="3"
             android:layout_column="6"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="18"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -158,7 +176,8 @@
             android:id="@+id/imageButton20"
             android:layout_row="4"
             android:layout_column="1"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="19"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -166,7 +185,8 @@
             android:id="@+id/imageButton21"
             android:layout_row="4"
             android:layout_column="2"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="20"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -174,7 +194,8 @@
             android:id="@+id/imageButton22"
             android:layout_row="4"
             android:layout_column="3"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="21"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -182,7 +203,8 @@
             android:id="@+id/imageButton23"
             android:layout_row="4"
             android:layout_column="4"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="22"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -190,7 +212,8 @@
             android:id="@+id/imageButton24"
             android:layout_row="4"
             android:layout_column="5"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="23"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -198,7 +221,8 @@
             android:id="@+id/imageButton25"
             android:layout_row="4"
             android:layout_column="6"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="24"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -206,7 +230,8 @@
             android:id="@+id/imageButton26"
             android:layout_row="5"
             android:layout_column="1"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="25"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -214,7 +239,8 @@
             android:id="@+id/imageButton27"
             android:layout_row="5"
             android:layout_column="2"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="26"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -222,7 +248,8 @@
             android:id="@+id/imageButton28"
             android:layout_row="5"
             android:layout_column="3"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="27"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -230,7 +257,8 @@
             android:id="@+id/imageButton29"
             android:layout_row="5"
             android:layout_column="4"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="28"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -238,7 +266,8 @@
             android:id="@+id/imageButton30"
             android:layout_row="5"
             android:layout_column="5"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="29"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -246,7 +275,8 @@
             android:id="@+id/imageButton31"
             android:layout_row="5"
             android:layout_column="6"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="30"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -254,7 +284,8 @@
             android:id="@+id/imageButton32"
             android:layout_row="6"
             android:layout_column="1"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="31"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -262,7 +293,8 @@
             android:id="@+id/imageButton33"
             android:layout_row="6"
             android:layout_column="2"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="32"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -270,7 +302,8 @@
             android:id="@+id/imageButton34"
             android:layout_row="6"
             android:layout_column="3"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="33"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -278,7 +311,8 @@
             android:id="@+id/imageButton35"
             android:layout_row="6"
             android:layout_column="4"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="34"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -286,7 +320,8 @@
             android:id="@+id/imageButton36"
             android:layout_row="6"
             android:layout_column="5"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="35"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -294,5 +329,6 @@
             android:id="@+id/imageButton37"
             android:layout_row="6"
             android:layout_column="6"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"/>
+            app:srcCompat="@drawable/ic_help_outline_black_36dp"
+            android:tag="36"/>
     </GridLayout>
