--- a/app/src/main/res/layout/layout_6_6.xml
+++ b/app/src/main/res/layout/layout_6_6.xml
@@ -6,7 +6,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:columnCount="7"
-        android:rowCount="8">
+        android:rowCount="9">
 
         <ImageButton
             android:id="@+id/imageButton2"
@@ -339,5 +339,13 @@
         android:text="Small Text"
         android:id="@+id/result"
         android:layout_row="7"
+        android:layout_column="1" />
+
+    <Button
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:text="send"
+        android:id="@+id/buttonSend"
+        android:layout_row="8"
         android:layout_column="1" />
 </GridLayout>
