--- a/app/src/main/res/layout/content_rooms.xml
+++ b/app/src/main/res/layout/content_rooms.xml
@@ -20,7 +20,7 @@
         android:layout_alignBaseline="@+id/userNameET"
         android:layout_alignBottom="@+id/userNameET"
         android:layout_alignParentStart="true"
-        android:text="Your name" />
+        android:text="@string/your_name" />
 
     <EditText
         android:id="@+id/userNameET"
@@ -38,7 +38,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/userNameET"
         android:layout_marginTop="16dp"
-        android:text="4x4" />
+        android:text="@string/_4x4" />
 
     <RadioButton
         android:id="@+id/radioButton6x6"
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/radioButton4x4"
-        android:text="6x6" />
+        android:text="@string/_6x6" />
 
     <Button
         android:id="@+id/roomCreateBtn"
@@ -54,6 +54,13 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/radioButton6x6"
         android:layout_alignEnd="@+id/userNameET"
-        android:text="create" />
+        android:text="@string/create" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/roomCreateBtn"
+        android:id="@+id/roomList" />
 
 </RelativeLayout>
