--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,19 +17,19 @@
         android:id="@+id/flip_horizontal_oval_view_big"
         android:layout_width="@dimen/fv_mini"
         android:layout_height="@dimen/fv_mini"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_gravity="center_horizontal"
-        android:padding="4dp"
-        android:clipToPadding="false"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:clickable="true"
+        android:clipToPadding="false"
+        android:padding="4dp"
         app:checked="false"
         app:enableInitialAnimation="true"
-        app:frontLayout="@layout/flip_front_custom"
         app:frontImage="@drawable/unknown"
-        app:rearLayout="@layout/flip_rear_custom"
+        app:frontLayout="@layout/flip_front_custom"
         app:rearImage="@drawable/russia"
-        app:rearImageAnimationDelay="0"/>
+        app:rearImageAnimationDelay="0"
+        app:rearLayout="@layout/flip_rear_custom" />
 
     <eu.davidea.flipview.FlipView
         android:id="@+id/slide_left_square_view"
