--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,8 +18,8 @@
         android:tag="0"
         android:layout_row="1"
         android:layout_column="1"
-        android:layout_width="@dimen/fv_mini"
-        android:layout_height="@dimen/fv_mini"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
