--- a/app/src/main/res/layout/layout_4x4.xml
+++ b/app/src/main/res/layout/layout_4x4.xml
@@ -8,16 +8,33 @@
         android:columnCount="7"
         android:rowCount="9">
 
-        <ImageButton
-            android:id="@+id/imageButton2"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_column="1"
-            android:layout_row="1"
-            app:srcCompat="@drawable/ic_help_outline_black_36dp"
-            android:tag="0" />
+    <eu.davidea.flipview.FlipView
+        android:id="@+id/image1"
+        android:tag="0"
+        android:layout_row="1"
+        android:layout_column="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
+        android:layout_gravity="center_horizontal"
+        android:clickable="true"
+        android:clipToPadding="false"
+        android:padding="@dimen/default_padding"
+        app:frontBackgroundColor="@android:color/white"
+        app:frontBackground="@drawable/unknown"
+        app:rearBackgroundColor="@android:color/white"
+        app:rearBackground="@drawable/unknown"
+        app:checked="false"
+        app:enableInitialAnimation="true"
+        app:animationDuration="400"
+        app:frontImage="@drawable/unknown"
+        app:frontLayout="@layout/flip_front_custom"
+        app:rearImageAnimationDelay="0"
+        app:rearLayout="@layout/flip_rear_custom" />
 
-        <ImageButton
+
+    <ImageButton
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:id="@+id/imageButton3"
