--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,11 +4,13 @@
     <dimen name="nav_header_height">160dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_horizontal_custom_margin">0dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="fv_normal">52dp</dimen>
     <dimen name="fv_mini">40dp</dimen>
     <dimen name="fv_normal_elevated">60dp</dimen>
     <dimen name="fv_mini_elevated">48dp</dimen>
+    <dimen name="default_padding">0dp</dimen>
 
 </resources>
