--- a/app/src/main/res/layout/layout_flip_6_6.xml
+++ b/app/src/main/res/layout/layout_flip_6_6.xml
@@ -5,16 +5,18 @@
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:paddingLeft="10dp"
         android:columnCount="7"
-        android:rowCount="9">
+        android:rowCount="9"
+        android:useDefaultMargins="true">
 
     <eu.davidea.flipview.FlipView
         android:id="@+id/image1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="1"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:layout_row="1"
@@ -41,7 +43,7 @@
         android:layout_column="2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -66,7 +68,7 @@
         android:layout_column="3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -91,7 +93,7 @@
         android:layout_column="4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -116,7 +118,7 @@
         android:layout_column="5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -141,7 +143,7 @@
         android:layout_column="6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -166,7 +168,7 @@
         android:layout_column="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -191,7 +193,7 @@
         android:layout_column="2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -216,7 +218,7 @@
         android:layout_column="3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -241,7 +243,7 @@
         android:layout_column="4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -266,7 +268,7 @@
         android:layout_column="5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -291,7 +293,7 @@
         android:layout_column="6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -316,7 +318,7 @@
         android:layout_column="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -341,7 +343,7 @@
         android:layout_column="2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -366,7 +368,7 @@
         android:layout_column="3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -391,7 +393,7 @@
         android:layout_column="4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -416,7 +418,7 @@
         android:layout_column="5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -441,7 +443,7 @@
         android:layout_column="6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -466,7 +468,7 @@
         android:layout_column="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -491,7 +493,7 @@
         android:layout_column="2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -516,7 +518,7 @@
         android:layout_column="3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -541,7 +543,7 @@
         android:layout_column="4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -566,7 +568,7 @@
         android:layout_column="5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -591,7 +593,7 @@
         android:layout_column="6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -616,7 +618,7 @@
         android:layout_column="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -641,7 +643,7 @@
         android:layout_column="2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -666,7 +668,7 @@
         android:layout_column="3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -691,7 +693,7 @@
         android:layout_column="4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -716,7 +718,7 @@
         android:layout_column="5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -741,7 +743,7 @@
         android:layout_column="6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -766,7 +768,7 @@
         android:layout_column="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -791,7 +793,7 @@
         android:layout_column="2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -816,7 +818,7 @@
         android:layout_column="3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -841,7 +843,7 @@
         android:layout_column="4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -866,7 +868,7 @@
         android:layout_column="5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -891,7 +893,7 @@
         android:layout_column="6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+
         android:layout_marginEnd="@dimen/activity_horizontal_custom_margin"
         android:layout_marginRight="@dimen/activity_horizontal_custom_margin"
         android:clickable="true"
@@ -910,18 +912,19 @@
         app:rearLayout="@layout/flip_rear_custom" />
 
     <TextView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text=""
         android:id="@+id/result"
         android:layout_row="7"
+        android:layout_columnSpan="3"
         android:layout_column="1" />
 
     <TextView
         android:id="@+id/test1"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_column="6"
         android:layout_row="7"
         android:text=""
@@ -929,8 +932,8 @@
 
     <TextView
         android:id="@+id/test2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_column="6"
         android:layout_row="8"
         android:text=""
@@ -938,27 +941,28 @@
 
     <TextView
         android:id="@+id/step"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_column="5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="4"
         android:layout_row="7"
         android:text="Step"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
         android:id="@+id/userRecord"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_column="5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="4"
+        android:layout_columnSpan="2"
         android:layout_row="8"
         android:text="Record"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
-    <Button
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:text="send"
-        android:id="@+id/buttonSend"
-        android:layout_row="8"
-        android:layout_column="1" />
+    <!--<Button-->
+        <!--android:layout_width="50dp"-->
+        <!--android:layout_height="50dp"-->
+        <!--android:text="send"-->
+        <!--android:id="@+id/buttonSend"-->
+        <!--android:layout_row="8"-->
+        <!--android:layout_column="1" />-->
 </GridLayout>
