--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,28 +13,37 @@
     tools:context="com.example.mishka.flagmemorine.activity.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <eu.davidea.flipview.FlipView
-        android:id="@+id/image"
-        android:tag="0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:clickable="true"
-        android:clipToPadding="false"
-        android:padding="4dp"
-        app:frontBackgroundColor="@android:color/white"
-        app:rearBackgroundColor="@android:color/white"
-        app:checked="false"
-        app:enableInitialAnimation="true"
-        app:animationDuration="400"
-        app:frontLayout="@layout/flip_front_custom"
-        app:frontImage="@drawable/unknown"
-        app:rearImage="@drawable/russia"
-        app:rearImageAnimationDelay="0"
-        app:rearLayout="@layout/flip_rear_custom" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <eu.davidea.flipview.FlipView
+            android:id="@+id/image"
+            android:tag="0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:clickable="true"
+            android:clipToPadding="false"
+            android:padding="4dp"
+            app:frontBackgroundColor="@android:color/white"
+            app:rearBackgroundColor="@android:color/white"
+            app:checked="false"
+            app:enableInitialAnimation="true"
+            app:animationDuration="400"
+            app:frontLayout="@layout/flip_front_custom"
+            app:frontImage="@drawable/unknown"
+            app:rearImage="@drawable/russia"
+            app:rearImageAnimationDelay="0"
+            app:rearLayout="@layout/flip_rear_custom" />
 
+        <include
+            layout="@layout/layout_4x4"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
+    </LinearLayout>
 
 </RelativeLayout>
