--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -11,122 +11,123 @@
     tools:context="com.example.mishka.flagmemorine.activity.StartActivity">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        android:orientation="vertical">
 
         <Button
+            android:id="@+id/play"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/play"
-            android:id="@+id/play" />
+            android:text="@string/play" />
 
         <RadioGroup
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:id="@+id/rg1"
-            android:layout_gravity="center_horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
 
             <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/xsmall"
                 android:id="@+id/xsmall"
-                android:layout_gravity="left"
-                android:layout_row="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_column="0"
-                android:layout_weight="1"
-                android:checked="false" />
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/small"
-                android:id="@+id/small"
                 android:layout_gravity="left"
                 android:layout_row="0"
-                android:layout_column="1"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:checked="false"
+                android:text="@string/xsmall" />
 
             <RadioButton
+                android:id="@+id/small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/medium"
-                android:id="@+id/medium"
+                android:layout_column="1"
+                android:layout_gravity="left"
+                android:layout_row="0"
                 android:layout_weight="1"
+                android:text="@string/small" />
+
+            <RadioButton
+                android:id="@+id/medium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
                 android:layout_gravity="left"
                 android:layout_row="1"
-                android:layout_column="0"
-                android:checked="false" />
+                android:layout_weight="1"
+                android:checked="false"
+                android:text="@string/medium" />
         </RadioGroup>
 
         <RadioGroup
+            android:id="@+id/rg2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:id="@+id/rg2"
-            android:layout_gravity="center_horizontal">
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
 
             <RadioButton
+                android:id="@+id/large"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/large"
-                android:id="@+id/large"
-                android:layout_weight="1.38"
+                android:layout_column="1"
                 android:layout_gravity="left"
                 android:layout_row="1"
-                android:layout_column="1" />
+                android:layout_weight="1.38"
+                android:text="@string/large" />
 
             <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/xlarge"
                 android:id="@+id/xlarge"
-                android:layout_weight="1.09"
-                android:layout_row="2"
-                android:layout_column="0"
-                android:layout_gravity="left" />
-
-            <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/xxlarge"
-                android:id="@+id/xxlarge"
-                android:layout_weight="1"
+                android:layout_column="0"
+                android:layout_gravity="left"
                 android:layout_row="2"
+                android:layout_weight="1.09"
+                android:text="@string/xlarge" />
+
+            <RadioButton
+                android:id="@+id/xxlarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_column="1"
-                android:layout_gravity="left|center_horizontal" />
+                android:layout_gravity="left|center_horizontal"
+                android:layout_row="2"
+                android:layout_weight="1"
+                android:checked="true"
+                android:text="@string/xxlarge" />
         </RadioGroup>
 
         <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/multiplayer"
             android:id="@+id/multiplayer"
-            android:layout_gravity="center_horizontal" />
-
-        <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/statistic"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/multiplayer" />
+
+        <Button
             android:id="@+id/statistic"
-            android:layout_gravity="center_horizontal" />
-
-        <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/stopAds"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/statistic" />
+
+        <Button
             android:id="@+id/stopAds"
-            android:layout_gravity="center_horizontal" />
-
-        <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/userInfo"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/stopAds" />
+
+        <Button
             android:id="@+id/userInfo"
-            android:layout_gravity="center_horizontal" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/userInfo" />
 
     </LinearLayout>
 
